force-app/main/default/objects/Billable_Hours__c/Billable_Hours__c.object-meta.xml
<CustomObject>
    <label>Billable Hours</label>
    <nameField>
        <label>Billable Hours</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billables Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>