force-app/main/default/objects/Billable_Hours__c/fields/Freelance_In_Project__c.field-meta.xml
<CustomField>
    <fullName>Freelance_In_Project__c</fullName>
    <label>Freelance In Project</label>
    <type>Lookup</type>
    <referenceTo>Freelance_in_project__c</referenceTo>
    <relationshipName>FreelanceInProjectRelationship</relationshipName>
</CustomField>