force-app/main/default/objects/Billable_Hours__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hours</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>