force-app/main/default/objects/Billable_Hours__c/fields/Month_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_Date__c</fullName>
    <label>Month Date</label>
    <type>Date</type>
</CustomField>