force-app/main/default/objects/Billable_Hours__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Reported</fullName></value>
            <value><fullName>Approved</fullName></value>
            <value><fullName>Declined</fullName></value>
            <value><fullName>Pending Payment</fullName></value>
            <value><fullName>Paid</fullName></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>